Tidy up collections code